[package]
name = "sort-channels"
version = "0.1.0"
authors = ["Gabriel Thomé <gabrielallan.thome@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.4"
tokio = { version = "1.4.0", features = ["rt-multi-thread"] }
alphanumeric-sort = "1.4.1"
dotenv = "0.15.0"
mongodb = "2.0.0-alpha"